# determine-docker-tags

./: .drone.yml  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  renovate.json
.forgejo/workflows/: lint.yml  release.yml
determine_docker_tags/: __init__.py
tests/: test_determine_tags.py  test_is_app_name_empty.py  test_write_tags_to_file.py
