[project]
name = "determine-docker-tags"
version = "0.3.0"
description = "A small program to determine docker image tags"
authors = [
    {name = "Magnus Walbeck",email = "magnus.walbeck@walbeck.it"}
]
license = "EUPL-1.2"
readme = "README.md"
requires-python = ">=3.10,<4.0"
repository = "https://git.walbeck.it/walbeck-it/determine-docker-tags"

[project.scripts]
determine-docker-tags = "determine_docker_tags.__init__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (==0.15.9)",
    "pytest (==9.0.2)"
]
